# colabrsync

./: .gitignore  README.md  pyproject.toml
colabrsync/: __init__.py  rsyncmirror.py
tests/: test_rsyncmirror.py
