[tool.poetry]
name = "colabrsync"
version = "0.2.0"
description = "Run rsync periodically in the background on Google Colab."
license = "MIT"
authors = ["Susumu OTA <1632335+susumuota@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/susumuota/colabrsync"
keywords = ["rsync", "colab", "Google Colab"]
classifiers = [
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Archiving",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: System :: Archiving :: Mirroring",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
